# mutbot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/archive/: 2026-02-24-feature-vscode-theme.md  2026-02-24-refactor-runtime-declaration.md  2026-02-25-analysis-blocking-io-asyncio.md  2026-02-25-bugfix-graceful-shutdown.md  2026-02-25-feature-web.md  2026-02-26-feature-chat-input-redesign.md  2026-02-26-feature-config-system.md  2026-02-26-feature-provider-config.md  2026-02-26-refactor-mutagent-async-architecture.md  2026-02-26-refactor-session-declaration.md  2026-02-27-bugfix-frontend-ui-polish.md  2026-02-27-bugfix-session-loading-and-shutdown.md  2026-02-27-feature-setup-wizard-rerun.md  2026-02-28-feature-session-model-selector.md  2026-02-28-feature-ui-polish-batch-1.md  2026-02-28-feature-workspace-registry.md  2026-02-28-refactor-merge-session-types.md  2026-03-01-refactor-message-model-migration.md  2026-03-02-feature-interactive-ui-tools.md  2026-03-03-feature-session-ux-improvements.md  2026-03-03-refactor-setup-wizard.md  2026-03-04-refactor-config-system.md  2026-03-04-refactor-guide-agent-unification.md  2026-03-05-bugfix-frontend-ux-issues.md  2026-03-05-feature-config-update-redesign.md  2026-03-06-refactor-session-status-ownership.md  2026-03-06-refactor-unified-websocket.md  2026-03-07-bugfix-graceful-shutdown.md  2026-03-07-refactor-terminal-protocol.md  2026-03-09-bugfix-chrome-cdp-debug.md  2026-03-09-bugfix-pyright-type-errors.md  2026-03-09-bugfix-terminal-enqueue-wakeup.md  2026-03-09-bugfix-websocket-url-hardcoded-localhost.md  2026-03-09-bugfix-workspace-hash-routing.md  2026-03-09-feature-openid-auth.md  2026-03-10-feature-http-client-enhancements.md  2026-03-10-feature-mobile-workspace.md  2026-03-10-feature-terminal-mobile-ux.md  2026-03-11-feature-asgi-server.md  (+31 more)
docs/design/: auth.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.setup.config.ts
tests/: test_auth_setup_view.py  test_config_system.py  test_lint.py  test_login_view.py  test_mcp.py  test_providers_view.py  test_proxy_translation.py  test_public_access_hardening.py  test_rpc.py  test_rpc_handlers.py  test_runtime_imports.py  test_runtime_menu.py  test_runtime_session.py  test_runtime_terminal.py  test_server.py  test_session_persistence.py  test_setup_integration.py  test_setup_provider.py  test_setup_token_login.py  test_sgr_normalize.py  test_supervisor.py  test_transport.py  test_ui_context.py  test_workspace_selector.py
(+241 files in other folders)
