[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutbot"
version = "0.1.0"
description = "A Python AI Bot based on mutagent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "tiwb"},
]
keywords = ["ai", "agent", "llm", "runtime", "hot-reload"]
dependencies = [
    "mutagent[web-extract]>=0.1.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
mutbot = "mutbot.__main__:main"

[project.urls]
Homepage = "https://github.com/tiwb/mutbot"
Repository = "https://github.com/tiwb/mutbot"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mutbot*"]

[tool.setuptools.package-data]
"mutbot.web" = ["frontend_dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
